added Html accounts,persons, transactions. -added navigation routing to pages. -added apiService -added services for components

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,33 @@
-<p>about works!</p>
+<div class="about-container">
+    <h1>About Reliance Accounts Management System</h1>
+    <p>
+      Welcome to Reliance Accounts Management System! We are dedicated to providing the best account management services to our customers.
+      Our team is comprised of experienced professionals who are passionate about their work.
+    </p>
+    <p>
+      We manage people's accounts and transactions with integrity and more efficiency than our competitors.
+    </p>
+    <p>
+      <strong>Our Mission:</strong> To deliver high-quality account management products and services that exceed our customers' expectations.
+    </p>
+    <p>
+      <strong>Our Vision:</strong> To be the leading provider in our industry, recognized for our innovation and customer satisfaction.
+    </p>
+    <p>
+      <strong>Our Values:</strong>
+    </p>
+    <ul>
+      <li>Integrity</li>
+      <li>Excellence</li>
+      <li>Customer Focus</li>
+      <li>Innovation</li>
+      <li>Teamwork</li>
+    </ul>
+    <p>
+      We are committed to continuous improvement and always looking for new ways to serve our customers better.
+    </p>
+    <p>
+      Thank you for choosing Reliance Accounts Management System. We look forward to working with you.
+    </p>
+  </div>
+  
