--- a/src/app/accounts-details/accounts-details.component.html
+++ b/src/app/accounts-details/accounts-details.component.html
@@ -1,1 +1,40 @@
-<p>accounts-details works!</p>
+<div class="container">
+    <!-- Edit Account Form on the Left -->
+    <div class="card-container">
+        <p-card>
+            <div class="p-fluid p-formgrid p-grid">
+                <div class="p-field p-col-12 p-md-6">
+                    <label for="accountNumber">Account Number</label>
+                    <input id="accountNumber" [disabled]="account.accountID!==''" type="text" pInputText [(ngModel)]="account.accountNumber" required />
+                </div>
+                <br>
+                <div class="p-field p-col-12 p-md-6">
+                    <label for="accountType">Account Type</label>
+                    <p-dropdown id="transactionType" from [options]="accountTypes" [(ngModel)]="account.accountType" placeholder="Select a type"></p-dropdown>
+                </div>
+                <br>
+                <div class="p-field p-col-12 p-md-6">
+                    <label for="balance">Balance</label>
+                    <input id="balance" [disabled]="account.accountID!==''" type="number" pInputText [(ngModel)]="account.balance" required />
+                </div>
+                <br>
+                <div class="p-field p-col-12 p-md-6">
+                    <label for="activeInd">Active</label>&nbsp;
+                    <p-checkbox id="activeInd" [(ngModel)]="account.activeInd" [binary]="true"></p-checkbox>
+                </div>
+                <hr>
+                <div class="p-field p-col-12">
+                    <div class="button-group">
+                        <button pButton icon="pi pi-save" class="p-button-success" type="button" label="Save"
+                            (click)="updateAccount()"></button>
+                        <button pButton icon="pi pi-arrow-circle-left" type="button" label="Back to List"
+                            (click)="navigateToDetails()"></button>
+                    </div>
+                </div>
+            </div>
+        </p-card>
+    </div>
+    <div class="transactions-list-container" *ngIf="account.accountID">
+        <app-transaction-listing [accountId]="account.accountID" (refreshAccount)="refresh()"></app-transaction-listing>
+    </div>
+</div>
