--- a/src/app/persons-listing/persons-listing.component.html
+++ b/src/app/persons-listing/persons-listing.component.html
@@ -1,1 +1,129 @@
-<p>persons-listing works!</p>
+<div>
+    <div class="page_heading"> PERSONS LIST</div>
+</div>
+<p-table [value]="persons">
+    <ng-template pTemplate="caption" style="width: 100%;">
+        <div class="grid m-0 py-2 ">
+            <div class="col-2">
+                <p-button  severity="success" (onClick)="addPerson()"
+                    label="Add New Person"></p-button>&nbsp;
+            </div>
+            <div class="col-6">
+
+            </div>
+            <div class="col-4" style="text-align: right;">
+                <i class="pi pi-search"></i>&nbsp;
+                <span class="p-input-icon-left ml-2">
+                    <input pInputText [(ngModel)]="search" type="text" (input)="applyFilterGlobal($event, 'contains')" />
+                </span> &nbsp;
+                <span>Only Active persons</span>&nbsp;
+                <p-checkbox [binary]="true" [(ngModel)]="active_only" (ngModelChange)="refresh()"></p-checkbox>
+            </div>
+        </div>
+
+
+    </ng-template>
+    <ng-template pTemplate="header">
+        <tr>
+            <th></th>
+            <th pSortableColumn="PersonId">
+                <span>
+                    <span class="label" class="multiline-header"
+                    >PersonId</span>
+                    <span class="filter">
+                        <p-sortIcon field="PersonId"></p-sortIcon>
+                        <p-columnFilter type="text" field="PersonId" display="menu"></p-columnFilter>
+                    </span>
+                </span>
+            </th>
+            <th pSortableColumn="IdNumber">
+                <span>
+                    <span class="label" class="multiline-header"
+                    >IdNumber</span>
+                    <span class="filter">
+                        <p-sortIcon field="PersonId"></p-sortIcon>
+                        <p-columnFilter type="text" field="IdNumber" display="menu"></p-columnFilter>
+                    </span>
+                </span>
+            </th>
+            <th pSortableColumn="FirstName">
+                <span>
+                    <span class="label" class="multiline-header"
+                    >FirstName</span>
+                    <span class="filter">
+                        <p-sortIcon field="PersonId"></p-sortIcon>
+                        <p-columnFilter type="text" field="FirstName" display="menu"></p-columnFilter>
+                    </span>
+                </span>
+            </th>
+            <th pSortableColumn="FirstName">
+                <span>
+                    <span class="label" class="multiline-header"
+                    >FirstName</span>
+                    <span class="filter">
+                        <p-sortIcon field="PersonId"></p-sortIcon>
+                        <p-columnFilter type="text" field="FirstName" display="menu"></p-columnFilter>
+                    </span>
+                </span>
+            </th>
+            <th pSortableColumn="Email">
+                <span>
+                    <span class="label" class="multiline-header"
+                    >Email</span>
+                    <span class="filter">
+                        <p-sortIcon field="PersonId"></p-sortIcon>
+                        <p-columnFilter type="text" field="Email" display="menu"></p-columnFilter>
+                    </span>
+                </span>
+            </th>
+            <th pSortableColumn="PhoneNumber">
+                <span>
+                    <span class="label" class="multiline-header"
+                    >PhoneNumber</span>
+                    <span class="filter">
+                        <p-sortIcon field="PersonId"></p-sortIcon>
+                        <p-columnFilter type="text" field="PhoneNumber" display="menu"></p-columnFilter>
+                    </span>
+                </span>
+            </th>
+            <th pSortableColumn="DateOfBirth">
+                <span>
+                    <span class="label" class="multiline-header"
+                    >DateOfBirth</span>
+                    <span class="filter">
+                        <p-sortIcon field="PersonId"></p-sortIcon>
+                        <p-columnFilter type="text" field="DateOfBirth" display="menu"></p-columnFilter>
+                    </span>
+                </span>
+            </th>
+            <th pSortableColumn="Active">
+                <span>
+                    <span class="label" class="multiline-header"
+                    >Active</span>
+                    <span class="filter">
+                        <p-sortIcon field="PersonId"></p-sortIcon>
+                        <p-columnFilter type="text" field="Active" display="menu"></p-columnFilter>
+                    </span>
+                </span>
+            </th>
+        </tr>
+    </ng-template>
+    <ng-template pTemplate="body" let-person>
+        <tr>
+            <td style="width: 100px;">
+                <p-button severity="info" icon="pi pi-pencil" size="small" title="Edit person details" (onClick)="openEdit(person.personID)"></p-button>&nbsp;
+                <p-button severity="danger" icon="pi pi-trash" size="small"  title="Deactivate person" (onClick)="deactivate(person.idNumber)"></p-button>
+            </td>
+            <td>{{ person.personID }}</td>
+            <td>{{ person.idNumber }}</td>
+            <td>{{ person.firstName }}</td>
+            <td>{{ person.lastName }}</td>
+            <td>{{ person.email }}</td>
+            <td>{{ person.phoneNumber }}</td>
+            <td>{{ person.dateOfBirth | date: 'yyyy-MM-dd' }}</td>
+            <td>
+                <p-checkbox [disabled]="true" [binary]="true" [(ngModel)]="person.activeInd"></p-checkbox>
+            </td>
+        </tr>
+    </ng-template>
+</p-table>
