--- a/src/app/transaction-listing/transaction-listing.component.html
+++ b/src/app/transaction-listing/transaction-listing.component.html
@@ -1,1 +1,57 @@
-<p>transaction-listing works!</p>
+<div class="card" style="margin: auto; width: 80%;">
+    <div class="page_heading">Transaction's TRANSACTIONS LIST</div>
+    <p-table [value]="transaction">
+      <ng-template pTemplate="caption">
+        <div>
+          <div class="col-2">
+            <p-button severity="success" (onClick)="openEditDialog(transaction,false)" label="Add New Transaction"></p-button>&nbsp;
+          </div>
+          <div class="col-4" style="text-align: right;">
+            <i class="pi pi-search"></i>&nbsp;
+            <span class="p-input-icon-left ml-2">
+              <input pInputText [(ngModel)]="searchTransaction" type="text" (input)="applyFilterGlobal($event, 'contains')" />
+            </span>
+          </div>
+        </div>
+      </ng-template>
+      <ng-template pTemplate="header">
+        <tr>
+          <th></th>
+          <th pSortableColumn="TransactionId">
+            <span>Transaction ID</span>
+            <p-sortIcon field="TransactionId"></p-sortIcon>
+          </th>
+          <th pSortableColumn="TransactionDate">
+            <span>Transaction Date</span>
+            <p-sortIcon field="TransactionDate"></p-sortIcon>
+          </th>
+          <th pSortableColumn="TransactionType">
+            <span>Transaction Type</span>
+            <p-sortIcon field="TransactionType"></p-sortIcon>
+          </th>
+          <th pSortableColumn="Amount">
+            <span>Amount</span>
+            <p-sortIcon field="Amount"></p-sortIcon>
+          </th>
+          <th pSortableColumn="Description">
+            <span>Description</span>
+            <p-sortIcon field="Description"></p-sortIcon>
+          </th>
+        </tr>
+      </ng-template>
+      <ng-template pTemplate="body" let-transaction>
+        <tr>
+          <td>
+            <p-button severity="info" icon="pi pi-eye" (onClick)="openEditDialog(transaction,true)" title="View transaction details"></p-button>
+          </td>
+          <td>{{ transaction.transactionId }}</td>
+          <td>{{ transaction.transactionDate | date: 'short' }}</td>
+          <td>{{ transaction.transactionType }}</td>
+          <td>{{ transaction.amount | currency:'ZAR':'symbol' }}</td>
+          <td>{{ transaction.description }}</td>
+        </tr>
+      </ng-template>
+    </p-table>
+  </div>
+  
+  
