--- a/src/app/persons-listing/persons-listing.component.html
+++ b/src/app/persons-listing/persons-listing.component.html
@@ -5,8 +5,7 @@
     <ng-template pTemplate="caption" style="width: 100%;">
         <div class="grid m-0 py-2 ">
             <div class="col-2">
-                <p-button  severity="success" (onClick)="addPerson()"
-                    label="Add New Person"></p-button>&nbsp;
+                <p-button severity="success" (onClick)="addPerson()" label="Add New Person"></p-button>&nbsp;
             </div>
             <div class="col-6">
 
@@ -14,7 +13,8 @@
             <div class="col-4" style="text-align: right;">
                 <i class="pi pi-search"></i>&nbsp;
                 <span class="p-input-icon-left ml-2">
-                    <input pInputText [(ngModel)]="search" type="text" (input)="applyFilterGlobal($event, 'contains')" />
+                    <input pInputText [(ngModel)]="search" type="text"
+                        (input)="applyFilterGlobal($event, 'contains')" />
                 </span> &nbsp;
                 <span>Only Active persons</span>&nbsp;
                 <p-checkbox [binary]="true" [(ngModel)]="active_only" (ngModelChange)="refresh()"></p-checkbox>
@@ -26,80 +26,63 @@
     <ng-template pTemplate="header">
         <tr>
             <th></th>
-            <th pSortableColumn="PersonId">
-                <span>
-                    <span class="label" class="multiline-header"
-                    >PersonId</span>
-                    <span class="filter">
-                        <p-sortIcon field="PersonId"></p-sortIcon>
-                        <p-columnFilter type="text" field="PersonId" display="menu"></p-columnFilter>
-                    </span>
-                </span>
-            </th>
             <th pSortableColumn="IdNumber">
                 <span>
-                    <span class="label" class="multiline-header"
-                    >IdNumber</span>
+                    <span class="label" class="multiline-header">Id Number</span>
                     <span class="filter">
                         <p-sortIcon field="PersonId"></p-sortIcon>
                         <p-columnFilter type="text" field="IdNumber" display="menu"></p-columnFilter>
                     </span>
                 </span>
             </th>
-            <th pSortableColumn="FirstName">
+            <th pSortableColumn="firstName">
                 <span>
-                    <span class="label" class="multiline-header"
-                    >FirstName</span>
+                    <span class="label" class="multiline-header">First Name</span>
                     <span class="filter">
                         <p-sortIcon field="PersonId"></p-sortIcon>
-                        <p-columnFilter type="text" field="FirstName" display="menu"></p-columnFilter>
+                        <p-columnFilter type="text" field="firstName" display="menu"></p-columnFilter>
                     </span>
                 </span>
             </th>
-            <th pSortableColumn="FirstName">
+            <th pSortableColumn="lastName">
                 <span>
-                    <span class="label" class="multiline-header"
-                    >FirstName</span>
+                    <span class="label" class="multiline-header">Last Name</span>
                     <span class="filter">
                         <p-sortIcon field="PersonId"></p-sortIcon>
-                        <p-columnFilter type="text" field="FirstName" display="menu"></p-columnFilter>
+                        <p-columnFilter type="text" field="lastName" display="menu"></p-columnFilter>
                     </span>
                 </span>
             </th>
-            <th pSortableColumn="Email">
+            <th pSortableColumn="email">
                 <span>
-                    <span class="label" class="multiline-header"
-                    >Email</span>
+                    <span class="label" class="multiline-header">Email</span>
                     <span class="filter">
-                        <p-sortIcon field="PersonId"></p-sortIcon>
-                        <p-columnFilter type="text" field="Email" display="menu"></p-columnFilter>
+                        <p-sortIcon ></p-sortIcon>
+                        <p-columnFilter type="text" field="email" display="menu"></p-columnFilter>
                     </span>
                 </span>
             </th>
-            <th pSortableColumn="PhoneNumber">
+            <th pSortableColumn="phoneNumber">
                 <span>
-                    <span class="label" class="multiline-header"
-                    >PhoneNumber</span>
+                    <span class="label" class="multiline-header">Phone Number</span>
                     <span class="filter">
                         <p-sortIcon field="PersonId"></p-sortIcon>
-                        <p-columnFilter type="text" field="PhoneNumber" display="menu"></p-columnFilter>
+                        <p-columnFilter type="text" field="phoneNumber" display="menu"></p-columnFilter>
                     </span>
                 </span>
             </th>
-            <th pSortableColumn="DateOfBirth">
+            <th pSortableColumn="dateOfBirth">
                 <span>
-                    <span class="label" class="multiline-header"
-                    >DateOfBirth</span>
+                    <span class="label" class="multiline-header">Date Of Birth</span>
                     <span class="filter">
                         <p-sortIcon field="PersonId"></p-sortIcon>
-                        <p-columnFilter type="text" field="DateOfBirth" display="menu"></p-columnFilter>
+                        <p-columnFilter type="text" field="dateOfBirth" display="menu"></p-columnFilter>
                     </span>
                 </span>
             </th>
             <th pSortableColumn="Active">
                 <span>
-                    <span class="label" class="multiline-header"
-                    >Active</span>
+                    <span class="label" class="multiline-header">Active</span>
                     <span class="filter">
                         <p-sortIcon field="PersonId"></p-sortIcon>
                         <p-columnFilter type="text" field="Active" display="menu"></p-columnFilter>
@@ -110,11 +93,12 @@
     </ng-template>
     <ng-template pTemplate="body" let-person>
         <tr>
-            <td style="width: 100px;">
-                <p-button severity="info" icon="pi pi-pencil" size="small" title="Edit person details" (onClick)="openEdit(person.personID)"></p-button>&nbsp;
-                <p-button severity="danger" icon="pi pi-trash" size="small"  title="Deactivate person" (onClick)="deactivate(person.idNumber)"></p-button>
+            <td style="width: 150px;">
+                <p-button severity="info" icon="pi pi-pencil" size="small" title="Edit person details"
+                    (onClick)="openEdit(person.personID)"></p-button>&nbsp;
+                <p-button severity="danger" icon="pi pi-trash" size="small" title="Deactivate person"
+                    (onClick)="deactivate(person.idNumber)"></p-button>
             </td>
-            <td>{{ person.personID }}</td>
             <td>{{ person.idNumber }}</td>
             <td>{{ person.firstName }}</td>
             <td>{{ person.lastName }}</td>
