--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -16,7 +16,8 @@
             </div>
             <br>
             <div style="text-align: center;">
-                <button pButton type="button" label="Login" (click)="login()"></button>
+                <button pButton type="button" label="Login" (click)="login()" style="margin-right: 10px;"></button>
+                <button pButton type="button" label="Register" (click)="navigateToRegister()" class="p-button-secondary"></button>
             </div>
         </p-card>
     </div>
