--- a/src/app/accounts-listing/accounts-listing.component.html
+++ b/src/app/accounts-listing/accounts-listing.component.html
@@ -4,7 +4,7 @@
         <ng-template pTemplate="caption">
             <div>
                 <div class="col-2">
-                    <p-button severity="success" (onClick)="addAccount(personID)" label="Add New Account"></p-button>&nbsp;
+                    <p-button severity="success" (onClick)="addAccount(personID)" label="Create New Account"></p-button>&nbsp;
                 </div>
                 <div class="col-4" style="text-align: right;">
                     <i class="pi pi-search"></i>&nbsp;
